--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     build: .
     environment:
       DATABASE_URL: "host=db user=postgres password=postgres dbname=users_db sslmode=disable"
+      QUEUE_URL: "amqp://admin:admin123@queue:5672/"
+      QUEUE_NAME: "users-ingested"
       APP_PORT: 3000
     ports:
       - "3000:3000"
@@ -45,6 +47,9 @@ services:
   queue:
     image: rabbitmq:3-management-alpine
     container_name: csv_ingestor_queue
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=admin123
     ports:
       - "5672:5672"
       - "15672:15672"
